# jni_between_java_and_cpp

./: .gitignore  README.md
C++/: CMakeLists.txt  CallbackManager.cpp  CallbackManager.h  CallbackWorker.cpp  CallbackWorker.h  com_finone_JavaCallback.cpp  com_finone_JavaCallback.h  com_finone_JavaInvoke.cpp  com_finone_JavaInvoke.h
C++/install/: libfemas_poc.dylib
Java/: pom.xml
Java/src/main/java/com/finone/: App.java  JavaCallback.java  JavaInvoke.java
Java/src/test/java/com/finone/: AppTest.java
